# seldon-testing

./: .gitignore  README.md  pyproject.toml
alibi_explain/: ale_regression_california.ipynb  anchor_tabular_iris.ipynb  cem_iris.ipynb  cfproto_housing.ipynb  interventional_tree_shap_adult_xgb.ipynb  kernel_shap_wine_intro.ipynb  linearity_measure_iris.ipynb  pd_variance_regression_friedman.ipynb  pdp_regression_bike.ipynb  permutation_importance_classification_leave.ipynb  trustscore_iris.ipynb
anova/: anova_linear.py
mlserver_models/multimodel/: ping.py  train.py
mlserver_models/multimodel/models/mushroom-xgboost/: model-settings.json  model.json
mlserver_models/pyro_model/: model-settings.json  ping.py
mlserver_models/svm/: model-settings.json  train.py
multimodel/models/mnist-svm/: model-settings.json
pyro_model/: load_models.py  numpyro-divorce.json  settings.json  train.py
svm/: ping.py
