[tool.poetry]
name = "seldon-testing"
version = "0.1.0"
description = ""
authors = ["James Bristow <jbris@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python =  ">=3.10,<3.13"
mlserver = "^1.6.1"
alibi = {extras = ["shap"], version = "^0.9.6"}
alibi-detect = {extras = ["tensorflow"], version = "^0.12.0"}
mlserver-sklearn = "^1.6.1"
mlserver-xgboost = "^1.6.1"
numpyro = "^0.17.0"
jax = "^0.5.2"
notebook = "^7.3.2"
seaborn = "^0.13.2"
matplotlib = "^3.10.1"
torch = "^2.6.0"
statsmodels = "^0.14.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
